@@ -214,8 +214,19 @@ exports.isResolved = isResolved;
 function isResolved(object) {
     if (object === undefined || object === null)
         return true;
-    return !isPromise(object.valueOf());
+    return !isRejected(object) && !isPromise(object.valueOf());
 };
+
+/**
+ * @returns whether the given object is a
+ * rejected promise.
+ */
+exports.isRejected = isRejected;
+function isRejected(object) {
+    if (object === undefined || object === null)
+        return false;
+    return object.valueOf() instanceof reject;
+}
 
 /**
  * Constructs a rejected promise.
@@ -230,8 +241,15 @@ function reject(reason) {
     }, function fallback(op, resolved) {
         var rejection = reject(reason);
         return resolved ? resolved(rejection) : rejection;
+    }, function valueOf() {
+        var rejection = create(reject.prototype);
+        rejection.reason = reason;
+        return rejection;
     });
 }
+
+reject.prototype = create(Promise.prototype);
+reject.prototype.constructor = reject;
 
 /**
  * Constructs a promise for an immediate reference.
